EDAN01/minizinc-1.6/tests/flattening/test-abort3.err_exp
mzn2fzn:
  error: 
  test-abort3.mzn:5 
  In variable declaration for 'f'. 
  In coercion. 
  In 'abort' expression. 
  Abort: "This assignment aborts!"
