EDAN01/minizinc-1.6/tests/flattening/test-abort3.mzn
% RUNS ON mzn2fzn

% Test abort/1.
%
float: f = abort("This assignment aborts!");
solve satisfy;
